--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,23 @@
 body {
     background-color: #212121;
-    color: #FFFFFF;
+    color: #ffffff;
     font-family: Roboto, serif;
     margin: 0;
 }
 
-p {
-    margin: 0;
-}
-
-section {
-    margin: 5px;
-}
-
-h4 {
-    margin-bottom: 3px;
-}
-
-header {
-    overflow: hidden;
+.navbar {
     background-color: #000000;
-    font-size: 2vw;
+    overflow: hidden;
 }
 
+.navbar nav a {
+    display: block;
+    float: left;
+    padding: 15px;
+    text-decoration: none;
+    color: white;
+}
+
+.navbar a:hover {
+    background-color: #111111;
+}
