Added an entry for 2022-06-23, changed font size.

--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,11 @@ body {
 }
 
 .title h1 {
-    font-size: 4vw;
+    font-size: 2.75em;
 }
 
 .title h2 {
-    font-size: 2.75vw;
+    font-size: 2em;
 }
 
 a:link {
