--- a/stylesresources.css
+++ b/stylesresources.css
@@ -1,8 +1,8 @@
 section {
-    font-size: 2vw;
+    font-size: 1.25em;
     margin-left: 15px;
 }
 
 h2 {
-    font-size: 3vw;
+    font-size: 1.75em;
 }
